# LearnOpenGL

./: CMakeLists.txt  Notes Opengl.md  main.cpp
Tutorial-01/: CMakeLists.txt  meglwindow.cpp
Tutorial-01/shader/: VertexShaderCode.vert
Tutorial-02/: CMakeLists.txt  main.cpp  meglwindow.cpp  meglwindow.h
Tutorial-03/: CMakeLists.txt  meglwindow.cpp
Tutorial-03/shaders/: FragmentShaderCode.frag  VertexShaderCode.vert
tutorial-01/: CMakeLists.txt  fragment_core.glsl  main.cpp  vertex_core.glsl
tutorial-1/: CMakeLists.txt  main.cpp
tutorial-2/: CMakeLists.txt  glad.c  main.cpp
tutorial-3/: CMakeLists.txt  main.cpp
